--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,14 @@ jobs:
             -v $(pwd)/postman_collections:/etc/newman \
             -t postman/newman \
             run /etc/newman/Postgrest.json
+      - run:
+          name: Ping registry
+          command: |
+            docker container run --network container:registry appropriate/curl --retry 10 --retry-connrefused http://localhost:8081
+      - run:
+          name: Test connecting to registry from server
+          command: |
+            docker-compose -p whale-of-a-time exec whale-of-a-time_server_1 curl http://registry:8081
 
 workflows:
   # Builds a custom image,
