--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,9 +72,8 @@ services:
       - zookeeper
       - broker
     ports:
-      - 8081:8081
-    expose:
-      - 8081
+      - 8085:8085
     environment:
       SCHEMA_REGISTRY_HOST_NAME: registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://broker:29092"
+      SCHEMA_REGISTRY_LISTENERS: "http://0.0.0.0:8085"
