--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,11 @@ workflows:
   # and publishes to AWS ECR!
   build_publish_dlc_aws_ecr:
     jobs:
-      - build_with_dlc_aws_ecr:
-          context: docker
+      # - build_with_dlc_aws_ecr:
+      #     context: docker
+      - aws-ecr/build-and-push-image:
+          repo: kelvintaywl/fancy-nginx-cached
+          dockerfile: ./Dockerfile
+          executor:
+            name: aws-ecr/default
+            use-docker-layer-caching: true
