--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,9 @@ jobs:
           version: 19.03.14
           docker_layer_caching: true
       - aws-ecr/build-and-push-image:
-          repo: kelvintaywl/fancy-nginx-cached
+          repo: public.ecr.aws/z1j6a2i1/kelvintaywl/fancy-nginx-cached
           dockerfile: ./Dockerfile
           tag: stable,latest
-      - aws-ecr/build-and-push-image:
-          repo: kelvin/fancy-nginx
-          dockerfile: ./Dockerfile
 
 workflows:
   build_publish_dlc_aws_ecr:
