--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,33 @@ jobs:
           repo: public.ecr.aws/z1j6a2i1/kelvintaywl/fancy-nginx-cached
           dockerfile: ./Dockerfile
           tag: stable,latest
+  build-and-push-sprintboot-image:
+    docker:
+      - image: cimg/openjdk:8.0.312
+    steps:
+      - checkout
+      - run:
+          name: build dependencies
+          command: |
+            cd springboot
+            ./mvnw package && java -jar target/gs-spring-boot-docker-0.1.0.jar
+      - aws-ecr/build-and-push-image:
+          repo: kelvintaywl/springboot-example
+          path: springboot
+          dockerfile: Dockerfile
+          setup-remote-docker: true
+          remote-docker-layer-caching: true
+          tag: 0.0.1
 
 workflows:
-  build_publish_dlc_aws_ecr:
+  # build_publish_dlc_aws_ecr:
+  #   jobs:
+  #     - aws-ecr/build-and-push-image:
+  #         repo: kelvintaywl/fancy-nginx-cached
+  #         dockerfile: ./Dockerfile
+  #         executor:
+  #           name: aws-ecr/default
+  #           use-docker-layer-caching: true
+  springboot_example:
     jobs:
-      - aws-ecr/build-and-push-image:
-          repo: kelvintaywl/fancy-nginx-cached
-          dockerfile: ./Dockerfile
-          executor:
-            name: aws-ecr/default
-            use-docker-layer-caching: true
+      - build-and-push-sprintboot-image
