--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - setup_remote_docker:
           # https://circleci.com/docs/2.0/building-docker-images/#docker-version
           version: 20.10.7
+          docker_layer_caching: true
       - run:
           name: Build image
           command: |
