--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db
   db:
     image: library/postgres:13
-    # container_name: postgres
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
