--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,15 @@ jobs:
       - run:
           name: Wait on MySQL to be ready
           command: |
+            # see env vars on this MySQL container
+            docker container inspect mysql | jq ".[0].Config.Env"
+
             N=8
             while [ $N -gt 0 ]
             do
-              if $(mysql -h 127.0.0.1 -P 3306 -u root -e "SELECT 1;"); then
+              # not great that we disable SSL mode, but this is just an example
+              # See https://stackoverflow.com/a/65916427
+              if $(mysql --ssl-mode=DISABLED -h 127.0.0.1 -P 3306 -u root -D circle_test -e "SELECT 1;"); then
                 echo "Connected to MySQL!"
                 exit 0
               fi
