--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ jobs:
       # See https://circleci.com/docs/2.0/configuration-reference#available-linux-machine-images
       image: ubuntu-2004:202201-02
     steps:
-      - run: |
-          docker info
-          env | grep DOCKER_
+      - run: docker info
+      - run: (env | grep DOCKER_) || echo 'no DOCKER_* env vars found'
       - run:
           name: Spin up Redis at 6379
           command: |
