--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
   build_custom_nginx:
     environment:
       <<: *environment
-    docker:
-      - image: cimg/base:stable
+    machine:
+      image: ubuntu-2204:2022.04.1
     parameters:
       image_name:
         type: string
@@ -20,43 +20,53 @@ jobs:
         default: 'latest'
     steps:
       - checkout
-      - setup_remote_docker:
-          # https://circleci.com/docs/2.0/building-docker-images/#docker-version
-          version: 20.10.7
       - run:
-          name: Build image
+          name: Build image via Kaniko
           command: |
+            docker run \
+                -e DOCKER_REGISTRY \
+                -e DOCKER_USER \
+                -e DOCKER_LOGIN \
+                -e DOCKER_PASSWORD \
+                -v /home/circleci/project:/workspace \
+                gcr.io/kaniko-project/executor:latest \
+                --dockerfile /workspace/Dockerfile \
+                --destination "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:${CIRCLE_SHA1}" \
+                --context dir:///workspace/
             docker image build --tag "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:${CIRCLE_SHA1}" .
             docker image tag "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:${CIRCLE_SHA1}" "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:<< parameters.image_tag >>"
       - run:
-          name: Run built-image as container (background)
-          command: |
-            docker container run -d --name fancy-nginx -p "8080:80" "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:${CIRCLE_SHA1}"
-      - run:
-          name: Check container is up
-          command: |
-            # Because we are using remote_docker, all docker-related activities run inside this remote container.
-            # In other words, the nginx server is not directly accessible to our primary container here.
-            # Hence, we run dockerize in the same network in order to poll it.
-            # NOTE that we are polling port 80, not 8080 since inside the network, our fancy-nginx is exposed at port 80 instead.
-            # See https://circleci.com/docs/2.0/building-docker-images/#accessing-services
-            docker container run --network container:fancy-nginx docker.io/jwilder/dockerize -wait http://localhost:80 -wait-retry-interval 2s -timeout 20s
-      - run:
-          name: Printscreen webpage served by container
-          command: |
-            # https://hub.docker.com/r/lifenz/docker-screenshot
-            # Save a screenshot as screenshot.png at 1280px after pausing 2000ms, with zoom factor: 1
-            docker container run --network container:fancy-nginx --name screenshot lifenz/docker-screenshot http://localhost:80 screenshot.png 1280px 2000 1
-            docker cp screenshot:/srv/screenshot.png $PWD
-      - store_artifacts:
-           path: screenshot.png
-      - run:
-          name: Publish image
-          command: |
-            # login credentials should be provided via context or project environment variables.
-            echo $DOCKER_PASSWORD | docker login $DOCKER_REGISTRY --username $DOCKER_LOGIN --password-stdin
+          name: Inspect built images
+          command: docker image ls
+      # - run:
+      #     name: Run built-image as container (background)
+      #     command: |
+      #       docker container run -d --name fancy-nginx -p "8080:80" "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>:${CIRCLE_SHA1}"
+      # - run:
+      #     name: Check container is up
+      #     command: |
+      #       # Because we are using remote_docker, all docker-related activities run inside this remote container.
+      #       # In other words, the nginx server is not directly accessible to our primary container here.
+      #       # Hence, we run dockerize in the same network in order to poll it.
+      #       # NOTE that we are polling port 80, not 8080 since inside the network, our fancy-nginx is exposed at port 80 instead.
+      #       # See https://circleci.com/docs/2.0/building-docker-images/#accessing-services
+      #       docker container run --network container:fancy-nginx docker.io/jwilder/dockerize -wait http://localhost:80 -wait-retry-interval 2s -timeout 20s
+      # - run:
+      #     name: Printscreen webpage served by container
+      #     command: |
+      #       # https://hub.docker.com/r/lifenz/docker-screenshot
+      #       # Save a screenshot as screenshot.png at 1280px after pausing 2000ms, with zoom factor: 1
+      #       docker container run --network container:fancy-nginx --name screenshot lifenz/docker-screenshot http://localhost:80 screenshot.png 1280px 2000 1
+      #       docker cp screenshot:/srv/screenshot.png $PWD
+      # - store_artifacts:
+      #      path: screenshot.png
+      # - run:
+      #     name: Publish image
+      #     command: |
+      #       # login credentials should be provided via context or project environment variables.
+      #       echo $DOCKER_PASSWORD | docker login $DOCKER_REGISTRY --username $DOCKER_LOGIN --password-stdin
 
-            docker image push --all-tags "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>"
+      #       docker image push --all-tags "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>"
 
   docker_compose_tests:
     machine:
@@ -110,8 +120,8 @@ workflows:
     jobs:
       - build_custom_nginx:
           context: docker
-  # Runs services as-per a docker-compose file,
-  # and runs integration tests against spun services.
-  compose_tests:
-    jobs:
-      - docker_compose_tests
+  # # Runs services as-per a docker-compose file,
+  # # and runs integration tests against spun services.
+  # compose_tests:
+  #   jobs:
+  #     - docker_compose_tests
